# miao-ai

./: .dockerignore  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_TASK.md  README.md  docker-compose.prod.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/agent_templates/: Dockerfile.template  miao_runner.py
backend/alembic/: env.py
backend/alembic/versions/: a3c5e7f90123_add_invoke_tasks.py  b5d8e2a91034_add_model_providers_and_llm_models.py  bfc0ddcb9bcb_init_all_tables_mysql.py  c8f0a1d2e3b4_add_login_users_and_sessions.py  d4a1c2b3e5f6_add_db_uuid_defaults_for_auth_tables.py  f2b4fcbf8369_init_agents_versions_keys.py
backend/app/: auth.py  config.py  crypto.py  db.py  logging.py  main.py  utils.py
backend/app/api/: agents.py  auth.py  health.py  invoke.py  keys.py  models.py  providers.py  versions.py
backend/app/models/: __init__.py  agent.py  agent_version.py  api_key.py  base.py  invoke_task.py  llm_model.py  model_provider.py  user.py  user_session.py
backend/app/runtime/: __init__.py  docker.py  llm_env.py  manager.py  process.py  registry.py  storage.py  venv.py
backend/app/schemas/: agent.py  agent_version.py  api_key.py  auth.py  invoke_task.py  llm_model.py  model_provider.py
backend/app/services/: task_worker.py
backend/scripts/: e2e_smoke.sh
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_health.py  test_invoke.py  test_llm_models.py
docs/: ARCHITECTURE.md  DEPLOYMENT_PLAN.md  QUICKSTART.md  ROADMAP.md  UI_DESIGN_SYSTEM.md  api-reference.md
(+64 files in other folders)
